--- a/index.html
+++ b/index.html
@@ -5,180 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NYC Taxi Analytics Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            padding: 20px;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .header {
-            text-align: center;
-            color: white;
-            margin-bottom: 30px;
-            padding: 20px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            backdrop-filter: blur(10px);
-        }
-
-        .header h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-        }
-
-        .header p {
-            font-size: 1.2em;
-            opacity: 0.9;
-        }
-
-        .dashboard {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin-bottom: 30px;
-        }
-
-        .card {
-            background: white;
-            padding: 25px;
-            border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease;
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
-        }
-
-        .card h3 {
-            color: #333;
-            margin-bottom: 15px;
-            font-size: 1.3em;
-            border-bottom: 2px solid #667eea;
-            padding-bottom: 10px;
-        }
-
-        .stat-card {
-            text-align: center;
-            background: linear-gradient(135deg, #667eea, #764ba2);
-            color: white;
-        }
-
-        .stat-card h3 {
-            border-bottom: none;
-            color: white;
-        }
-
-        .stat-number {
-            font-size: 2.5em;
-            font-weight: bold;
-            margin: 10px 0;
-        }
-
-        .stat-label {
-            font-size: 1.1em;
-            opacity: 0.9;
-        }
-
-        .chart-container {
-            position: relative;
-            height: 300px;
-            margin-top: 15px;
-        }
-
-        .insight {
-            background: #f8f9fa;
-            border-left: 4px solid #667eea;
-        }
-
-        .insight-item {
-            margin: 15px 0;
-            padding: 15px;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .insight-item h4 {
-            color: #333;
-            margin-bottom: 8px;
-        }
-
-        .insight-item p {
-            color: #666;
-            line-height: 1.5;
-        }
-
-        .loading {
-            text-align: center;
-            padding: 20px;
-            color: #666;
-        }
-
-        .error {
-            text-align: center;
-            padding: 20px;
-            color: #e74c3c;
-            background: #ffeaea;
-            border-radius: 8px;
-            margin: 10px 0;
-        }
-
-        .algorithm-info {
-            background: #e8f4fd;
-            border-left: 4px solid #3498db;
-        }
-
-        .tech-stack {
-            display: flex;
-            justify-content: center;
-            gap: 15px;
-            margin-top: 20px;
-            flex-wrap: wrap;
-        }
-
-        .tech-tag {
-            background: rgba(255, 255, 255, 0.2);
-            padding: 8px 15px;
-            border-radius: 20px;
-            color: white;
-            font-size: 0.9em;
-        }
-
-        @media (max-width: 768px) {
-            .dashboard {
-                grid-template-columns: 1fr;
-            }
-            
-            .header h1 {
-                font-size: 2em;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>🚕 NYC Taxi Analytics Dashboard</h1>
+            <h1> NYC Taxi Analytics Dashboard</h1>
             <p>Real-time insights from New York City taxi trip data</p>
-
+            
         </div>
 
         <div class="dashboard">
-            <!-- Summary Statistics -->
             <div class="card stat-card">
                 <h3>Total Trips</h3>
                 <div class="stat-number" id="total-trips">--</div>
@@ -205,7 +42,6 @@
         </div>
 
         <div class="dashboard">
-            <!-- Charts -->
             <div class="card">
                 <h3>Top 5 Highest Fares</h3>
                 <p>Custom sorting algorithm implementation</p>
@@ -224,16 +60,15 @@
         </div>
 
         <div class="dashboard">
-            <!-- Insights -->
             <div class="card insight">
-                <h3>📊 Key Insights</h3>
+                <h3> Key Insights</h3>
                 <div id="insights-content">
                     <div class="loading">Loading insights...</div>
                 </div>
             </div>
 
             <div class="card algorithm-info">
-                <h3>⚙️ Custom Algorithm</h3>
+                <h3> Custom Algorithm</h3>
                 <div class="insight-item">
                     <h4>Manual Top-N Selection Sort</h4>
                     <p><strong>Purpose:</strong> Find highest fares without built-in functions</p>
@@ -245,7 +80,6 @@
         </div>
 
         <div class="dashboard">
-            <!-- Additional Charts -->
             <div class="card">
                 <h3>Distance Category Analysis</h3>
                 <p>Trip distribution by distance categories</p>
@@ -267,3 +101,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
